--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 GCN_classification.ipynb
 data/
 sparsification/data
-#sparsification/data_50
-#sparsification/data_05
+sparsification/data_50
+sparsification/data_05
 
 
 
